# TeachBaseClient

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
apps/client/v1/: services.py  urls.py
apps/client/v1/migrations/: 0001_initial.py  0002_alter_course_authors_alter_course_bg_url_and_more.py  0003_alter_course_authors_alter_course_types.py  0004_simpleuser_locked_alter_simpleuser_description_and_more.py  0005_alter_coursesession_apply_url_and_more.py
apps/client/v1/models/: course.py  course_session.py  label.py  user.py
apps/client/v1/views/: cources.py  course_sessions.py  simple_user.py
system/: settings.py  urls.py
