[tool.poetry]
name = "teachbaseclient"
version = "0.2.1"
description = ""
authors = ["AleksandrBelyan <belyan.alex93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
requests = "^2.31.0"
psycopg2-binary = "^2.9.6"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
